# citl-static-analysis

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
lib/: CMakeLists.txt
lib/libAnalyzer/: CMakeLists.txt
lib/libAnalyzer/include/: ArchHandler.hpp  Driver.hpp  ElfHandler.hpp  MachOHandler.hpp  PeHandler.hpp
lib/libAnalyzer/include/analyzers/: AslrEA.hpp  BaseEnvAnalyzer.hpp  CfiEA.hpp  CodeSigningEA.hpp  DepEA.hpp  DriverEA.hpp  HeapEA.hpp  LibraryEA.hpp  RelroEA.hpp  RetFlowGuardEA.hpp  SandboxEA.hpp  ScopEA.hpp  SectionStatsEA.hpp  SehEA.hpp  SpectreWidgetEA.hpp  StrippedEA.hpp  UtilsEA.hpp
lib/libAnalyzer/include/analyzers_code/: BaseCodeAnalyzer.hpp  BranchCA.hpp  CallStatsCA.hpp  CodeQACA.hpp  CorpusRankCfgCA.hpp  DynLibLoadCA.hpp  FortifySourceCA.hpp  FuncBaseCA.hpp  FuncCheckCA.hpp  FuncInstrStatsCA.hpp  FunctionLists.hpp  RetStatsCA.hpp  RetpolineCA.hpp  SandboxFuncCA.hpp  SelectableFuncsCA.hpp  StackGuardCA.hpp  StackStatsCA.hpp
lib/libAnalyzer/include/analyzers_event/: FuzzImmEvent.hpp
lib/libAnalyzer/src/: ArchHandler.cpp  Driver.cpp  ElfHandler.cpp  MachOHandler.cpp  PeHandler.cpp
lib/libAnalyzer/src/analyzers/: AslrEA.cpp  CfiEA.cpp  CodeSigningEA.cpp  DepEA.cpp  DriverEA.cpp  HeapEA.cpp  LibraryEA.cpp  RelroEA.cpp  RetFlowGuardEA.cpp  SandboxEA.cpp  ScopEA.cpp  SectionStatsEA.cpp  SehEA.cpp  SpectreWidgetEA.cpp  StrippedEA.cpp
lib/libAnalyzer/src/analyzers_code/: BranchCA.cpp  CallStatsCA.cpp  CodeQACA.cpp  CorpusRankCfgCA.cpp  DynLibLoadCA.cpp  FortifySourceCA.cpp  FuncBaseCA.cpp  FuncCheckCA.cpp  FuncInstrStatsCA.cpp  FunctionLists.cpp  RetStatsCA.cpp  RetpolineCA.cpp  SandboxFuncCA.cpp  SelectableFuncsCA.cpp  StackGuardCA.cpp  StackStatsCA.cpp
lib/libAnalyzer/src/analyzers_event/: FuzzImmEvent.cpp
lib/libCFG/: CMakeLists.txt
lib/libCFG/include/: AbiOracle.hpp  Block.hpp  BlockQueueUniq.hpp  CapPattern.hpp  CapstoneHelper.hpp  Cfg.hpp  CfgRes.hpp  CpuState.hpp  DwarfReader.hpp  ElfSyms.hpp  EventManager.hpp  MachOSyms.hpp  MemBitMap.hpp  MemRange.hpp  MemoryMap.hpp  PeSyms.hpp  RegCache.hpp  SymResolver.hpp
lib/libCFG/src/: AbiOracle.cpp  Block.cpp  BlockQueueUniq.cpp  CapPattern.cpp  CapstoneHelper.cpp  Cfg.cpp  CpuState.cpp  ElfSyms.cpp  EventManager.cpp  MachOSyms.cpp  MemBitMap.cpp  MemoryMap.cpp  PeSyms.cpp  SymResolver.cpp
lib/libTrace/: CMakeLists.txt
lib/libTrace/include/: DisasmAnalyzer.hpp  LiftingAnalyzer.hpp  SymTraceAnalyzer.hpp  TraceAnalyzer.hpp  TraceDefs.hpp  TraceManager.hpp
lib/libTrace/src/: DisasmAnalyzer.cpp  LiftingAnalyzer.cpp  SymTraceAnalyzer.cpp  TraceAnalyzer.cpp  TraceManager.cpp
lib/libUtils/: CMakeLists.txt
lib/libUtils/include/: PerfDefs.hpp  SecComp.hpp  Utils.hpp  meta.hpp
lib/libUtils/src/: SecComp.cpp  Utils.cpp  meta.cpp
src/: main.cpp  trace-walker.cpp
test/: CMakeLists.txt  checksec-wrapper.sh  define-test.cmake
test/json/elf/arm/: dlink-proxyd.json  dropbear-forthdr.json  e2fsck.json  libcrypto_utils_android_8_1.so.json  libpcre2-and10.so.json  s62xd-strip.json  s62xd.json  tail-call-bug.json
test/json/elf/arm64/: 6620_wmt_lpbk.json  android-10-symtab-specialcase.json  dropbear-forthdr.json  libcjson.so.json  linker64.json
test/json/elf/mips/: acos_service.json  dropbear-forthdr.json  fallback-mips-gp-sym.json  nl-be.json  nl.json  readelf.json  symtab-und-plts.json  wlanconfig-strip.json
test/json/elf/ppc32/: mtd-openwrt-stripped.json  readelf.json  telnet.json
test/json/elf/x86/: dd-wrt-http-stripped.json  gcc_findutils_32_O3_code_stripped.json  hello-go.json  hello-rust.json  jinfo-soname.json  openbsd-nslookup.json  overlapping-sections.json  partx-forthdr-64.json  readelf-strip.json  readelf.json  retpoline-test-clang.json  sample-app-fort.json  sample-app.json  scop-test.json  tree-fuzzdat.json  tree.json  vmnet.ko.json  x86-32-got-syms.json  xfce4-about-strip.json
test/json/macho/: bnepd.json  exfat.kext.json  hello-world-go.json
test/json/pe/: StackExample.exe.json  Tcpview.exe.json  hello-go.exe.json  ntdll.dll.json  vms3cap.sys.json
test/src/: unit-bitmap.cpp  unit-block-queue.cpp  unit-cappattern.cpp  unit-cfgres.cpp  unit-driver.cpp  unit-regcache.cpp
utils/: citl-run-directory.py
